# zkgames-rps

./: .gitignore  Cargo.toml
cli/: Cargo.toml
data/: games.json
data/local-players/asd/: secret
data/local-players/player1/: secret
data/local-players/player2/: secret
data/local-players/username/: secret
data/public-players/123/: login-hash
data/public-players/asd/: login-hash
data/public-players/player1/: login-hash
data/public-players/player2/: login-hash
data/public-players/username/: login-hash
rps-game-client/: Cargo.toml
rps-game-client/src/: game.rs  games_data.rs  main.rs  menu.rs  user.rs
test-game/: Cargo.toml  build.rs
test-game/src/: lib.rs
zk-games/: Cargo.toml
zk-games-programs/login/: Cargo.toml
zk-games-programs/login/elf/: login-zk-program
zk-games-programs/login/src/: main.rs
zk-games-programs/rps-basic/: Cargo.toml
zk-games-programs/rps-basic/elf/: rps-basic-zk-program
zk-games-programs/rps-basic/src/: main.rs
zk-games-types/: Cargo.toml
zk-games-types/src/: lib.rs
zk-games/src/: lib.rs
zk-games/src/games/: mod.rs
zk-games/src/games/rps_basic/: mod.rs
zk-games/src/user/: mod.rs
zk-games/src/zk/: login.rs  mod.rs
