[workspace]
resolver = "2"
members  = ["cli"]

[workspace.package]
authors = ["Art3miX <r3mix.il@gmail.com>"]
edition = "2021"

[profile.release]
codegen-units    = 1
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
panic            = 'abort'
incremental      = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
