[workspace]
resolver = "2"
members  = ["rps-game-client", "test-game", "zk-games", "zk-games-programs/login"]

[workspace.package]
authors = ["Art3miX <r3mix.il@gmail.com>"]
edition = "2021"

[profile.release]
codegen-units    = 1
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
panic            = 'abort'
incremental      = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[workspace.dependencies]
zk-games = { path = "zk-games" }

sp1-zkvm     = "4.0.0"
sp1-sdk      = "4.0.0"
sp1-verifier = "4.0.0"
sp1-build    = "4.0.0"

sha2 = { version = "0.10" }
