[package]
name              = "zk-games"
version           = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
zk-games-types = { workspace = true }
sha2           = { workspace = true }
serde          = { version = "1.0", features = ["derive"] }
sp1-sdk        = { workspace = true }
